# rustApp

./: .env  Cargo.toml  Dockerfile
src/: main.rs
